--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
 
     testImplementation 'junit:junit:4.12'
