--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
