--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,9 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
-
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 }
 
